--- a/styles/inline.css
+++ b/styles/inline.css
@@ -305,6 +305,10 @@ body {
   cursor: pointer;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
 
+  .room .user-message .success {
+      color: #73B680;
+  }
+
 @media (max-width: 450px) {
   .room .type, .room .description {
     font-size: 0.9em; }
