--- a/styles/inline.css
+++ b/styles/inline.css
@@ -304,8 +304,21 @@ body {
   right: 15px;
   bottom: 15px;
   cursor: pointer;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
 
+.room .gcalendar-link img {
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
+    width: 50px;
+    height: 50px;
+}
+
+.room .user-message {
+    margin-top: 5px;
+    text-align: center;
+}
   .room .user-message .success {
       color: #73B680;
   }
