--- a/styles/inline.css
+++ b/styles/inline.css
@@ -313,6 +313,40 @@ body {
   margin: 16px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
 
+/* From https://auth0.com/blog/introduction-to-progressive-apps-part-one/ */
+.toast__container {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    pointer-events: none; }
+.toast__msg {
+    min-width: 250px;
+    min-height: 50px;
+    background: #39404F;
+    color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    font-size: 14px;
+    font-weight: 500;
+    padding-left: 15px;
+    padding-right: 10px;
+    word-break: break-all;
+    -webkit-transition: opacity 3s cubic-bezier(0, 0, 0.30, 1) 0;
+    -webkit-transition: opacity 0.30s cubic-bezier(0, 0, 0.30, 1) 0;
+    transition: opacity 0.30s cubic-bezier(0, 0, 0.30, 1) 0;
+    text-transform: initial;
+    margin-bottom: 10px;
+    border-radius: 2px; }
+.toast__msg--hide {
+    opacity: 0; }
+
 .room .name {
   font-size: 1.5em; }
 
