--- a/styles/inline.css
+++ b/styles/inline.css
@@ -128,6 +128,35 @@ body {
       -ms-flex: 1;
           flex: 1; }
 
+.header .dropbtn {
+  background: url(/images/ic_schedule_white_24px.svg) center center no-repeat;
+  }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
+
 .loader {
   left: 50%;
   top: 50%;
@@ -207,6 +236,7 @@ body {
   .empty-view h3 {
     font-size: 1.1em;
     line-height: 1.75em; }
+
 
 .dialog-container {
   background: rgba(0, 0, 0, 0.57);
