--- a/styles/inline.css
+++ b/styles/inline.css
@@ -302,7 +302,8 @@ body {
 
 .dialog-buttons {
   padding: 8px !important;
-  float: right; }
+  float: right;
+}
 
 .card {
   padding: 16px;
@@ -311,7 +312,8 @@ body {
   background: #fff;
   border-radius: 2px;
   margin: 16px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
 
 /* From https://auth0.com/blog/introduction-to-progressive-apps-part-one/ */
 .toast__container {
@@ -348,16 +350,20 @@ body {
     opacity: 0; }
 
 .room .name {
-  font-size: 1.5em; }
+  font-size: 1.5em;
+}
 
 .room .type, .room .description {
-  margin-top: 6px; }
+  margin-top: 6px;
+}
 
 .room .type {
-  font-size: 1.1em; }
+  font-size: 1.1em;
+}
 
 .room .description {
-    font-size: 1em; }
+    font-size: 1em;
+}
 
 .room[data-room-type="conference-room"] .name {
     color: #73b680; }
@@ -392,6 +398,11 @@ body {
     bottom: 15px;
     width: 50px;
     height: 50px;
+}
+
+.room .gcalendar-link img:hover {
+    width: 55px;
+    height: 55px;
 }
 
 .room .user-message {
