--- a/styles/inline.css
+++ b/styles/inline.css
@@ -119,16 +119,36 @@ body {
   .header #butFilter {
     background: url(/images/ic_filter_list_white_24px.svg) center center no-repeat; }
     .header .filter-list {
+        color: black;
         position: absolute;
         right: 0;
         top: 56px;
         background-color: white;
         box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 2px 9px 1px rgba(0, 0, 0, 0.12), 0 4px 2px -2px rgba(0, 0, 0, 0.2);
         text-align: center; }
+    .header .filter-list p {
+        margin: 10px 0 10px;
+        font-size: 0.8em;
+        font-weight: bold;
+    }
+    .header .time-filter {
+        display: flex;
+        margin-left: 15%;
+        margin-right: 15%;
+        margin-top: 10px;
+        justify-content: space-between;
+        border-bottom: 1px #999999;
+    }
+    .header .filter-divider {
+        margin-top: 15px;
+        margin-right: 5%;
+        margin-left: 5%;
+        border-bottom: 1px;
+    }
     .header .filter-list ul {
-        color: black;
         list-style-type: none;
         padding: 0 20px;
+        margin-top: 5px;
         margin-bottom: 10px;
         text-align: left;
         float: left; }
