--- a/styles/inline.css
+++ b/styles/inline.css
@@ -126,6 +126,15 @@ body {
         background-color: white;
         box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 2px 9px 1px rgba(0, 0, 0, 0.12), 0 4px 2px -2px rgba(0, 0, 0, 0.2);
         text-align: center; }
+    .header .filter-list .close-thick {
+        color: #777;
+        font: 18px/100% arial, sans-serif;
+        position: absolute;
+        right: 5px;
+        text-decoration: none;
+        text-shadow: 0 1px 0 #fff;
+        top: 5px;
+    }
     .header .filter-list p {
         margin: 10px 0 10px;
         font-size: 0.8em;
