--- a/styles/inline.css
+++ b/styles/inline.css
@@ -125,7 +125,10 @@ body {
         top: 56px;
         background-color: white;
         box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 2px 9px 1px rgba(0, 0, 0, 0.12), 0 4px 2px -2px rgba(0, 0, 0, 0.2);
-        text-align: center; }
+        text-align: center;
+        height: 380px;
+        overflow-y: auto;
+    }
     .header .filter-list .close-thick {
         color: #777;
         font: 18px/100% arial, sans-serif;
@@ -150,6 +153,9 @@ body {
         margin-top: 10px;
         justify-content: space-between;
         border-bottom: 1px #999999;
+    }
+    .header .time-filter-range {
+        width: 70%;
     }
     .header .filter-divider {
         margin-top: 15px;
